--- a/arch/arm64/configs/exynos8890-herolte_defconfig
+++ b/arch/arm64/configs/exynos8890-herolte_defconfig
@@ -109,8 +109,9 @@ CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
 # CONFIG_RCU_NOCB_CPU is not set
-# CONFIG_BUILD_BIN2C is not set
-# CONFIG_IKCONFIG is not set
+CONFIG_BUILD_BIN2C=y
+CONFIG_IKCONFIG=y
+CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=12
 CONFIG_GENERIC_SCHED_CLOCK=y
@@ -122,7 +123,11 @@ CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
-# CONFIG_MEMCG is not set
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
+CONFIG_MEMCG_SWAP_ENABLED=y
+CONFIG_MEMCG_FORCE_USE_VM_SWAPPINESS=y
+# CONFIG_MEMCG_KMEM is not set
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
@@ -351,6 +356,7 @@ CONFIG_ARM64_ERRATUM_845719=y
 CONFIG_TIMA=y
 # CONFIG_TIMA_LKMAUTH is not set
 CONFIG_TIMA_RKP=y
+CONFIG_UH_RKP=y
 # CONFIG_TIMA_RKP_DEBUG is not set
 CONFIG_RKP_KDP=y
 CONFIG_RKP_NS_PROT=y
@@ -414,7 +420,7 @@ CONFIG_FRONTSWAP=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
 CONFIG_CMA_PINPAGE_MIGRATION=y
-CONFIG_CMA_AREAS=7
+CONFIG_CMA_AREAS=8
 CONFIG_ZSWAP=y
 # CONFIG_ZSWAP_ENABLE_WRITEBACK is not set
 # CONFIG_ZSWAP_COMPACTION is not set
@@ -432,6 +438,7 @@ CONFIG_TIGHT_PGDAT_BALANCE=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_MMAP_READAROUND_LIMIT=0
 CONFIG_LARGE_DIRTY_BUFFER=y
+CONFIG_RBIN=y
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
@@ -601,7 +608,7 @@ CONFIG_IP_PNP_RARP=y
 CONFIG_NET_IP_TUNNEL=y
 # CONFIG_IP_MROUTE is not set
 # CONFIG_SYN_COOKIES is not set
-# CONFIG_NET_IPVTI is not set
+CONFIG_NET_IPVTI=y
 # CONFIG_NET_UDP_TUNNEL is not set
 # CONFIG_NET_FOU is not set
 # CONFIG_GENEVE is not set
@@ -660,7 +667,7 @@ CONFIG_INET6_XFRM_MODE_TRANSPORT=y
 CONFIG_INET6_XFRM_MODE_TUNNEL=y
 CONFIG_INET6_XFRM_MODE_BEET=y
 # CONFIG_INET6_XFRM_MODE_ROUTEOPTIMIZATION is not set
-# CONFIG_IPV6_VTI is not set
+CONFIG_IPV6_VTI=y
 CONFIG_IPV6_SIT=y
 # CONFIG_IPV6_SIT_6RD is not set
 CONFIG_IPV6_NDISC_NODETYPE=y
@@ -1047,6 +1054,7 @@ CONFIG_NFC=y
 # CONFIG_NFC_DIGITAL is not set
 # CONFIG_NFC_NCI is not set
 # CONFIG_NFC_HCI is not set
+CONFIG_SAMSUNG_NFC=y
 
 #
 # Near Field Communication (NFC) devices
@@ -1262,6 +1270,7 @@ CONFIG_CP_SECURE_BOOT=y
 CONFIG_HW_REV_DETECT=y
 # CONFIG_MODEM_IF_LEGACY_QOS is not set
 # CONFIG_MODEM_IF_QOS is not set
+CONFIG_DEV_RIL_BRIDGE=y
 
 #
 # NOTIFIER configs
@@ -1708,7 +1717,7 @@ CONFIG_WLAN_HERO=y
 # CONFIG_WLAN_HERO2 is not set
 CONFIG_BCMDHD_OOB_HOST_WAKE=y
 CONFIG_SPLIT_ARGOS_SET=y
-# CONFIG_WLAN_GRACE is not set
+CONFIG_WLAN_GRACE=y
 # CONFIG_WLAN_GREAT is not set
 # CONFIG_BCM_DETECT_CONSECUTIVE_HANG is not set
 # CONFIG_WLAN_5GDISABLE is not set
@@ -2685,8 +2694,8 @@ CONFIG_OIS_USE=y
 # CONFIG_OIS_FW_UPDATE_THREAD_USE is not set
 CONFIG_AF_HOST_CONTROL=y
 # CONFIG_TORCH_CURRENT_CHANGE_SUPPORT is not set
-CONFIG_CAMERA_HERO=y
-# CONFIG_CAMERA_GRACE is not set
+# CONFIG_CAMERA_HERO is not set
+CONFIG_CAMERA_GRACE=y
 # CONFIG_CAMERA_VJFLTE is not set
 # CONFIG_CAMERA_ULTE is not set
 CONFIG_OIS_USE_RUMBA_S4=y
@@ -2769,24 +2778,24 @@ CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
 #
 # ARM GPU Configuration
 #
-CONFIG_DDK_VERSION_OS="o"
+CONFIG_DDK_VERSION_OS="p"
 CONFIG_MALI_T8XX=y
 # CONFIG_MALI_R7P0 is not set
 # CONFIG_MALI_R9P0 is not set
 # CONFIG_MALI_R12P0 is not set
 # CONFIG_MALI_R15P0 is not set
-CONFIG_MALI_R22P0=y
+# CONFIG_MALI_R22P0 is not set
+CONFIG_MALI_R28P0=y
 CONFIG_MALI_SYSTRACE_SUPPORT=y
 CONFIG_MALI_DVFS=y
 CONFIG_MALI_RT_PM=y
 CONFIG_MALI_MIDGARD_ENABLE_TRACE=y
 CONFIG_MALI_EXYNOS_TRACE=y
 CONFIG_MALI_DEBUG_SYS=y
-# CONFIG_MALI_DEVFREQ is not set
+CONFIG_MALI_DEVFREQ=y
 CONFIG_MALI_EXPERT=y
 # CONFIG_MALI_DEBUG is not set
 # CONFIG_MALI_NO_MALI is not set
-# CONFIG_MALI_TRACE_TIMELINE is not set
 # CONFIG_MALI_SYSTEM_TRACE is not set
 # CONFIG_MALI_SEC_HWCNT is not set
 # CONFIG_MALI_DMA_FENCE is not set
@@ -2794,7 +2803,6 @@ CONFIG_MALI_EXPERT=y
 CONFIG_EXYNOS_SOC_NAME="8890"
 CONFIG_MALI_MIDGARD=y
 # CONFIG_MALI_GATOR_SUPPORT is not set
-# CONFIG_MALI_MIDGARD_DVFS is not set
 # CONFIG_MALI_CORESTACK is not set
 # CONFIG_MALI_FENCE_DEBUG is not set
 CONFIG_MALI_SEC_CL_BOOST=y
@@ -2805,10 +2813,10 @@ CONFIG_MALI_DEBUG_KERNEL_SYSFS=y
 CONFIG_MALI_EXYNOS_SECURE_RENDERING=y
 CONFIG_MALI_SEC_ASP_SECURE_BUF_CTRL=y
 CONFIG_MALI_PLATFORM_NAME="exynos"
-# CONFIG_MALI_JOB_DUMPING is not set
 # CONFIG_MALI_2MB_ALLOC is not set
 # CONFIG_MALI_PWRSOFT_765 is not set
 CONFIG_MALI_SEC_JOB_STATUS_CHECK=y
+# CONFIG_MALI_JOB_DUMP is not set
 CONFIG_VGA_ARB=y
 CONFIG_VGA_ARB_MAX_GPUS=16
 
@@ -2900,6 +2908,7 @@ CONFIG_CHECK_OCTA_CHIP_ID=y
 # CONFIG_DECON_SELF_REFRESH is not set
 # CONFIG_LOGGING_BIGDATA_BUG is not set
 # CONFIG_DUMPSTATE_LOGGING is not set
+# CONFIG_CHECK_DECON_TIME is not set
 CONFIG_EXYNOS_VPP=y
 CONFIG_EXYNOS_DECON_LCD=y
 CONFIG_EXYNOS_DECON_MDNIE_LITE=y
@@ -2920,10 +2929,13 @@ CONFIG_PANEL_S6E3HA3_DYNAMIC=y
 CONFIG_SUPPORT_CROSS_DOWNLOAD=y
 CONFIG_LCD_WEAKNESS_CCB=y
 # CONFIG_PANEL_DDI_SPI is not set
+# CONFIG_PANEL_DUALIZATION is not set
 CONFIG_LCD_BURNIN_CORRECTION=y
 # CONFIG_VDDR_1p5V_ALPM is not set
 CONFIG_DISPLAY_USE_INFO=y
 CONFIG_PANEL_CALL_MDNIE=y
+# CONFIG_SUPPORT_POC_FLASH is not set
+# CONFIG_POC_GRACE is not set
 # CONFIG_PANEL_GRAY_SPOT is not set
 # CONFIG_EXYNOS_DECON_8890_DUAL_DISPLAY is not set
 # CONFIG_PANEL_S6E36W0X10 is not set
@@ -3497,7 +3509,6 @@ CONFIG_USB_SERIAL_PL2303=y
 # CONFIG_USB_PHY is not set
 # CONFIG_USB_OTG_WAKELOCK is not set
 # CONFIG_NOP_USB_XCEIV is not set
-# CONFIG_DUAL_ROLE_USB_INTF is not set
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_ISP1301 is not set
 # CONFIG_USB_ULPI is not set
@@ -3902,6 +3913,7 @@ CONFIG_ION=y
 # CONFIG_ION_DUMMY is not set
 CONFIG_ION_EXYNOS=y
 CONFIG_ION_EXYNOS_STAT_LOG=y
+CONFIG_ION_RBIN_HEAP=y
 CONFIG_ION_EXYNOS_OF=y
 # CONFIG_FIQ_DEBUGGER is not set
 # CONFIG_FIQ_WATCHDOG is not set
@@ -4462,7 +4474,9 @@ CONFIG_GATOR=y
 # CONFIG_CCIC_NOTIFIER is not set
 # CONFIG_CCIC_S2MM003 is not set
 # CONFIG_CCIC_S2MM005 is not set
-# CONFIG_CCIC_ALTERNATE_MODE is not set
+# CONFIG_CCIC_ALTERNATE_MODE=y
+# CONFIG_CCIC_LPM_ENABLE is not set
+# CONFIG_CCIC_WATER_DETECT is not set
 
 #
 # Firmware Drivers
@@ -4485,7 +4499,7 @@ CONFIG_EXT3_FS_XATTR=y
 # CONFIG_EXT3_FS_POSIX_ACL is not set
 # CONFIG_EXT3_FS_SECURITY is not set
 CONFIG_EXT4_FS=y
-# CONFIG_EXT4_FS_POSIX_ACL is not set
+CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_ENCRYPTION is not set
 # CONFIG_EXT4_DEBUG is not set
@@ -4544,10 +4558,6 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_FAT_VIRTUAL_XATTR=y
 CONFIG_FAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_FAT_SUPPORT_STLOG=y
-CONFIG_EXFAT_FS=y
-CONFIG_EXFAT_VIRTUAL_XATTR=y
-CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
-CONFIG_EXFAT_SUPPORT_STLOG=y
 CONFIG_SDFAT_FS=y
 CONFIG_SDFAT_DELAYED_META_DIRTY=y
 # CONFIG_SDFAT_SUPPORT_DIR_SYNC is not set
@@ -4572,7 +4582,9 @@ CONFIG_PROC_FS=y
 # CONFIG_PROC_KCORE is not set
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
+CONFIG_PROC_FSLOG=y
 CONFIG_PROC_STLOG=y
+CONFIG_PROC_DLOG=y
 CONFIG_KERNFS=y
 CONFIG_SYSFS=y
 CONFIG_TMPFS=y
@@ -4880,6 +4892,10 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_SECURITY_YAMA is not set
 CONFIG_MST_LDO=y
+# CONFIG_MST_NONSECURE is not set
+# CONFIG_MFC_CHARGER is not set
+# CONFIG_MST_TEEGRIS is not set
+# CONFIG_MST_LPM_CONTROL is not set
 CONFIG_INTEGRITY=y
 # CONFIG_INTEGRITY_SIGNATURE is not set
 CONFIG_INTEGRITY_AUDIT=y
@@ -4887,6 +4903,9 @@ CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_EVM is not set
 # CONFIG_TZ_ICCC_MOS_SUPPORT is not set
 # CONFIG_TZ_ICCC_NOS_SUPPORT is not set
+CONFIG_SECURITY_DEFEX=y
+# CONFIG_DEFEX_KERNEL_ONLY is not set
+CONFIG_SECURITY_DSMS=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
